fixed alte burn not showing on alte + showing alte buy text on alte, also added terraswap link for lp staking in order to provide first

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -211,6 +211,11 @@ h4,.h4 {
     font-size: 12px;
     opacity: 0.5;
     margin-bottom: 10px;
+    a {
+        &:hover {
+            color:$primary;
+        }
+    }
 }
 
 .input-group {
